Working timer but wierd UI issues on mobile

--- a/style.css
+++ b/style.css
@@ -26,12 +26,50 @@ canvas {
     position: absolute;
 
     width: 100%;
-    top: calc(50% - calc(min(calc(60vh - 60px), 60vw)/2));
+    /* top: calc(50% - calc(min(calc(60vh - 60px), 60vw)/2)); */
+    top: calc(50vh - calc(.6*min(calc(50vh), 60vw)));
     text-align: center;
 
-    font-size: min(calc(60vh - 60px), 60vw);
+    /* font-size: min(calc(60vh - 60px), 60vw); */
+    font-size: min(calc(26vh), 36vw);
 
-    margin-top: -20px;
+    /* color: rgb(41, 40, 40); */
+    /* color: rgb(168, 152, 123); */
+    color: white;
+    opacity: 0.6;
+    /* font-family: 'Roboto Mono', sans-serif; */
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#timer {
+    position: absolute;
+
+    width: auto;
+    top: max(calc(50vh - 52vw), 10vh);
+    left: max(15vw, calc(50vw - 25vh));
+    text-align: center;
+
+    font-size: min(calc(10vh), 15vw);
+
+    
+
+    /* color: rgb(41, 40, 40); */
+    /* color: rgb(168, 152, 123); */
+    color: white;
+    opacity: 0.6;
+    /* font-family: 'Roboto Mono', sans-serif; */
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#counter {
+    position: absolute;
+
+    width: auto;
+    top: max(calc(50vh - 52vw), 10vh);
+    right: max(15vw, calc(50vw - 25vh));
+    text-align: center;
+
+    font-size: min(calc(10vh), 15vw);
 
     /* color: rgb(41, 40, 40); */
     /* color: rgb(168, 152, 123); */
